Editorial tidy up for TIP 518

--- a/tip/518.md
+++ b/tip/518.md
@@ -25,7 +25,7 @@ Mostly, it looks just ugly, but there are critical use-cases, specially in scrol
 When the BWidget autoscroll package is used, which displays scrollbars on demand, the scrollbars do not disappear if the contents is gone.
 And there is nothing, a programmer can do, as the Configure event does not fire on the scrolled frame widget.
 
-Another example is the scrolledwindow example by Emiliano in ticket 2863003fff <https://core.tcl.tk/tk/info/12006979562649c9> , where the solution 2 specific part may be removed \(or is ignored\).
+Another example is the scrolledwindow example by Emiliano in [ticket 2863003fff](https://core.tcl.tk/tk/info/12006979562649c9), where the solution 2 specific part may be removed \(or is ignored\).
 
 A typical workaround is to configure the width/height manually after the last children was unmapped.
 Unfortunately, this fact may not be determined for example by scrolling widgets etc. An eventual Configure binding is not firing.
@@ -55,7 +55,9 @@ The client frame ".c.f" changes its requested size to hold the new child, which 
 The new scrolling region is shown graphically by the scrollbar.
 
 Then press the "-" button to remove the user widget. The console output is:
+
 	-
+
 So, the child widget ".c.f.i1" is destroyed, but the frame ".c.f" does not rechange its requested size to 1x1 \(initial value\) but stays at 100x100 showing an empty plane.
 The scrollbar is not updated and the megawidget has no possibility to adjust that \(expect additional user action to inform that the last child was removed\).
 
@@ -110,16 +112,16 @@ Here are additional lines for the example above.
 
 # Reference Implementation
 
-Emiliano has provided a ticket 2863003fff <https://core.tcl.tk/tk/info/2863003fff>  with the implementation in branch bug-d6b95ce492 <https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200>.
+Emiliano has provided a [ticket 2863003fff](https://core.tcl.tk/tk/info/2863003fff) with the implementation in [branch bug-d6b95ce492](https://core.tcl.tk/tk/timeline?r=bug-d6b95ce492&nd&c=2016-09-21+06%3A32%3A55&n=200).
 
 This solution is now continued with the tag "tip518-event-last-child-unmanaged".
 
-Koen Dankart and Francois Vogel have worked on the solution of the similar tip474, which is available in branch bug-d6b95ce492-alt: <http://core.tcl.tk/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200> .
+Koen Dankart and Francois Vogel have worked on the solution of the similar tip474, which is available in [branch bug-d6b95ce492-alt](http://core.tcl.tk/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200).
 This information may eventually also be relevant.
 
 # Rejected Proposal
 
-TIP 454 <https://core.tcl.tk/tips/doc/trunk/tip/454.md> has proposed to set the size of the widget automatically to 1x1 (the initial size if no widget packed/gridded).
+[TIP 454](454.md) has proposed to set the size of the widget automatically to 1x1 (the initial size if no widget packed/gridded).
 
 Please read the discussion within the TIP which led to withdraw the proposal.
 
@@ -140,4 +142,3 @@ Due to that, a new virtual event is proposed.
 # Copyright
 
 This document has been placed in the public domain.
-
