--- a/tip/523.md
+++ b/tip/523.md
@@ -40,7 +40,7 @@ way is to have an index argument. This trivially extends the functionality to
 remove any element.
 
 Further, making it use multiple indices in the same way as lindex and lset does
-gives more symmetry and together with lset's ability to add to a sublist,
+gives more symmetry. Together with lset's ability to add to a sublist,
 doing push/pop on a sublist becomes feasible.
 The ability in lset and lindex to get an index list is not supported since
 argument expansion covers that usage.
@@ -70,7 +70,7 @@ Many alternative command names have been proposed.
 lpop, ltake, lremove, ltrunc, (Hunter Green #355E3B)
 
 No name will ever fully explain what it does or match all users' expectations
-of that that name means. "lpop" is close enough and short.
+of what that name means. "lpop" is close enough and short.
 
 ## Error
 
@@ -90,8 +90,8 @@ It was proposed to be able to pop more than one element.
 This could be an index list in last index, or an option:
 
 	lpop listVar ?index ...? {0 1)
-        lpop -n 2 listVar
-        lpop -gather {0 3 7} listVar
+	lpop -n 2 listVar
+	lpop -gather {0 3 7} listVar
 
 This should take careful consideration since having a command that sometimes
 returns a list and sometimes an element should not be taken lightly.
