Editorial pass for TIP 523

--- a/tip/523.md
+++ b/tip/523.md
@@ -18,9 +18,9 @@ Add a command to efficiently remove an element from a list.
 
 Stacks and queues are common structures to use lists, and thus adding
 and removing elements are common operations.
-Adding has a direct command through lappend, while removing has less
-obvious commands, which also needs tricks like K to avoid performance
-problems.
+Adding has a direct command through **lappend**, while removing has less
+obvious commands, which also needs tricks like
+**[K](https://wiki.tcl-lang.org/page/K)** to avoid performance problems.
 
 A single command to both retrieve the value and remove it is simpler.
 
@@ -36,13 +36,13 @@ or even
 	set stack [lrange [K $stack [set stack {}]] 0 end-1]
 
 To support both queue and stack the pop end needs to be chosen, and the easiest
-way is to have an index argument. This trivially extends the functionality to
+way is to have an _index_ argument. This trivially extends the functionality to
 remove any element.
 
-Further, making it use multiple indices in the same way as lindex and lset does
-gives more symmetry. Together with lset's ability to add to a sublist,
+Further, making it use multiple indices in the same way as **lindex** and **lset** does
+gives more symmetry. Together with **lset**'s ability to append to a sublist,
 doing push/pop on a sublist becomes feasible.
-The ability in lset and lindex to get an index list is not supported since
+The ability in **lset** and **lindex** to get an index list is not supported since
 argument expansion covers that usage.
 
 Since deleting last is rather common (stack) and also the cheapest operation,
@@ -54,11 +54,11 @@ A new command is added to the core with the following format.
 
 	lpop listVar ?index ...?
 
-The given indices are resolved to an element in the same way as lindex/lset
+The given indices are resolved to an element in the same way as **lindex**/**lset**
 does, except an index list is not supported, just plain index arguments.
-The return value is the element at index, and the list is modified to
+The return value is the element at _index_, and the list is modified to
 remove that element.
-If no index is given, the default is "end".
+If no index is given, the default is "`end`".
 An out of range index is an error.
 
 # Discussion
@@ -67,22 +67,22 @@ An out of range index is an error.
 
 Many alternative command names have been proposed.
 
-lpop, ltake, lremove, ltrunc, (Hunter Green #355E3B)
+`lpop`, `ltake`, `lremove`, `ltrunc`, (the bikeshed is Hunter Green #355E3B)
 
 No name will ever fully explain what it does or match all users' expectations
-of what that name means. "lpop" is close enough and short.
+of what that name means. "`lpop`" is close enough and short.
 
 ## Error
 
-Should an out of range index be an error or a no-op returning ""?
+Should an out of range index be an error or a no-op returning the empty string?
 
-Empty, for symmetry with lindex.
+Empty, for symmetry with **lindex**.
 
-"It has always seemed wrongheaded to me that commands like lindex return
-the empty string when no element exists"
+ > "It has always seemed wrongheaded to me that commands like lindex return
+   the empty string when no element exists"
 
-Lpop is not just reading like lindex, it is also removing and there the
-symmetry is not evident. Lreplace gives an error for too high indices.
+Moreover, **lpop** is not just reading like lindex, it is also removing and there the
+symmetry is not evident. By comparison, **lreplace** gives an error for too high indices.
 
 ## Pop Multiple
 
@@ -95,7 +95,8 @@ This could be an index list in last index, or an option:
 
 This should take careful consideration since having a command that sometimes
 returns a list and sometimes an element should not be taken lightly.
-Any of the above versions are possible extensions to the current TIP.
+Any of the above versions are possible extensions to the current TIP, but are
+outside its scope.
 
 # Copyright
 
