Updated text of tip495

--- a/tip/495.md
+++ b/tip/495.md
@@ -88,7 +88,7 @@ Projects such as tcllib which contain many modules, and are unlikely to be insta
 whole inside of a tclkit, will be given additional make directives:
 
 1. **module-list** - Return a list of modules
-2. **module-install** *destination* *module|all* *?module?...*- Install named modules
+2. **module-install** *destination* **?all?** *?module?* *?module?...*- Install named modules
 to the destination. Unlike the standard installation, this method does not place the
 module inside of a versioned package/module file structure. The module is simply dropped
 as either a .tm file for directory with the module's name and a pkgIndex.tcl file, within
@@ -168,36 +168,38 @@ file can be directly sourced, or invoked with `package require practcl`.
           install {
             # Ensure the library is compiled
             LIBRARY make depends library doc
-          # Make do acts on all of the steps computed by
-          # make depends
-          LIBRARY make do
-          # Project specific installation procedure
+            # Make do acts on all of the steps computed by
+            # make depends
+            LIBRARY make do
+            # Project specific installation procedure
           }
           info {
             # Output information that integrators need
             set dat [LIBRARY target pkginfo]
             foreach {field value} $dat {
               puts [list $field: $value]
-          }
-          exit 0
+            }
+            exit 0
           }
           teapot {
             # Ensure the library is compiled
             LIBRARY make depends library
-          LIBRARY make do
-          # Code to generate teapot distribution
+            LIBRARY make do
+            # Code to generate teapot distribution
           }
           default {
-          # Work like a makefile and trigger build targets
-          # Unlike a standard makefile "trigger" will re-kick
-          # off any indicated steps
-          LIBRARY make trigger {*}$argv
-          LIBRARY make do
+            # Work like a makefile and trigger build targets
+            # Unlike a standard makefile "trigger" will re-kick
+            # off any indicated steps
+            LIBRARY make trigger {*}$argv
+            LIBRARY make do
           }
         }
 
 # More Info
 
-*This is a work in progress.*
-
 The Practcl module is now in Tcllib [Practcl project](https://core.tcl-lang.org/tcllib/doc/trunk/embedded/www/tcllib/files/modules/practcl/practcl.html).
+
+A version of the Tcl Sample Extension has been re-worked to utilize practcl. [Sample Extension](https://core.tcl-lang.org/sampleextension/timeline?n=100&r=practcl)
+
+A version of the Tcl Sample Extension has been re-worked to utilize practcl and autosetup. [Sample Extension](https://core.tcl-lang.org/sampleextension/timeline?n=100&r=autosetup)
