--- a/tip/524.md
+++ b/tip/524.md
@@ -7,6 +7,7 @@
 	Post-History:
 	Keywords:       Tcl, object orientation, customization
 	Tcl-Version:    8.7
+	Tcl-Branch:     tip-524
 -----
 
 # Abstract
