Another less-synthetic example; menton correct implementation branch

--- a/tip/524.md
+++ b/tip/524.md
@@ -110,10 +110,78 @@ Which will print:
     ::gorp
     example=123
 
+This second example (adapted from the proposed manual page) shows just how thoroughly the ability to control the definition language can change things.
+
+    namespace eval myDefinitions {
+        # Delegate to existing definitions where not overridden
+        namespace path ::oo::define
+
+        # A custom type of method
+        proc exprmethod {name arguments body} {
+            tailcall method $name $arguments [list expr $body]
+        }
+
+        # A custom way of building a constructor
+        proc parameters args {
+            uplevel 1 [list variable {*}$args]
+            set body [join [lmap a $args {
+                string map [list %VAR% $a] {
+                    set [my varname %VAR%] [expr {double($%VAR%)}]
+                }
+            }] ";"]
+            tailcall constructor $args $body
+        }
+    }
+
+    # Bind the namespace into a (very simple) metaclass for use
+    oo::class create exprclass {
+        superclass oo::class
+        definitionnamespace myDefinitions
+    }
+
+    # Use the custom definitions
+    exprclass create quadratic {
+        parameters a b c
+
+        exprmethod evaluate {x} {
+            ($a * $x**2) + ($b * $x) + $c
+        }
+    }
+    exprclass create cubic {
+        parameters a b c d
+
+        exprmethod evaluate {x} {
+            ($a * $x**3) + ($b * $x**2) + ($c * $x) + $d
+        }
+    }
+
+    # Showing the resulting classes and objects in action
+    quadratic create quad 1 2 3
+    for {set x 0} {$x <= 4} {incr x} {
+        puts [format "quad(%d) = %.2f" $x [quad evaluate $x]]
+    }
+
+    cubic create cub 3 1 0.5 0.25
+    for {set x 0} {$x <= 4} {incr x} {
+        puts [format "cub(%d) = %.2f" $x [cub evaluate $x]]
+    }
+
+This prints:
+
+    quad(0) = 3.00
+    quad(1) = 6.00
+    quad(2) = 11.00
+    quad(3) = 18.00
+    quad(4) = 27.00
+	cub(0) = 0.25
+	cub(1) = 4.75
+	cub(2) = 29.25
+	cub(3) = 91.75
+	cub(4) = 210.25
+
 # Implementation
 
-Conceptual outline in the branch `dkf-oo-override-definition-namespaces` but
-that uses a different API and lacks introspection.
+See the branch `tip-524`.
 
 # Copyright
 
