TIP 522 Accepted, Implemented, and Final

--- a/tip/522.md
+++ b/tip/522.md
@@ -1,11 +1,15 @@
 # TIP 522: Test error codes with Tcltest
 	Author:		Peter Spjuth <peter.spjuth@gmail.com>
-	State:		Draft
+	State:		Final
 	Type:		Project
-	Vote:		In progress
+	Vote:		Done
 	Created:	22-Oct-2018
 	Post-History:
 	Tcl-Version:	8.7
+	Vote-Results:	8/0/0 accepted
+	Votes-For:	KBK, SL, AF, DGP, FV, DKF, AK, JN
+	Votes-Against:	none
+	Votes-Present:	none
 	Tcl-Branch:	tip-522
 	Keywords:	tcltest, error codes
 -----
