--- a/tip/525.md
+++ b/tip/525.md
@@ -1,12 +1,16 @@
 # TIP 525: Make Tcltest Report Overall Success in a Machine-Readable Way
 	Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        24-Oct-2018
 	Post-History:
 	Keywords:       Tcl, testing, continuous integration
 	Tcl-Version:    8.5
+	Vote-Results:	8/0/0 accepted
+	Votes-For:	KBK, SL, AF, DGP, FV, DKF, AK, JN
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
