--- a/tip/481.md
+++ b/tip/481.md
@@ -1,8 +1,8 @@
-# TIP 481: Tcl\_GetStringFromObj() with size\_t length parameter
+# TIP 481: `Tcl_GetStringFromObj()` with `size_t` length parameter
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        27-Oct-2017
 	Post-History:
 	Keywords:       Tcl
