--- a/tip/512.md
+++ b/tip/512.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        25-June-2018
 	Post-History:   
 	Keywords:       Tcl
@@ -28,19 +28,19 @@ a thread exit handler is how this should have been done.
 
 # Rationale
 
-When running test-cases in Windows (using mingw-64 or msvc, but using the
-win/Makefile system not the nmake system), the tclsh executable
+When running test-cases in Windows (using mingw-64 or MSVC, but using the
+win/Makefile system not the nmake system), the `tclsh` executable
 crashes after shutdown in some tests. The reason for this is that
-the additional test-code "tcltest" is compiled as stub-enabled extension
-which is dynamically loaded into tclsh. So, there is no "tcltest"
-executable in this environment, tclsh86.exe and tcltest86.dll are
+the additional test-code "`tcltest`" is compiled as stub-enabled extension
+which is dynamically loaded into `tclsh`. So, there is no "tcltest"
+executable in this environment, `tclsh86.exe` and `tcltest86.dll` are
 sufficient.
 
 If a stub-enabled extension registers an Exit-handler, the following
 happens at exit time. During the clean-up, Tcl unloads all extensions.
 When the clean-up is done, the last step is calling the registered
 Exit-handler. But ... since the exit handler function was located
-inside the dll, it's address space is gone already. This results
+inside the DLL, it's address space is gone already. This results
 in the mentioned crash.
 
 A similar problem exists in `Tcl_SetPanicProc()`: If a stub-enabled
@@ -55,12 +55,12 @@ the stub table either.
 
 # Specification
 
-The above mentioned functions are marked with _nostub_ (in tcl.decls),
-and the tools/genStubs.tcl tooling is adapted to recognize this special
+The above mentioned functions are marked with _nostub_ (in `tcl.decls`),
+and the `tools/genStubs.tcl` tooling is adapted to recognize this special
 keyword. The effect is that the function entry in the stub table is
 marked as deprecated, but the normal function entry is left as-is.
 
-When Tcl is compiled with -DTCL\_NO\_DEPRECATED, the stub entries for
+When Tcl is compiled with `-DTCL_NO_DEPRECATED`, the stub entries for
 the above functions will no longer be available. The stub table
 entries for those function will be filled with 0 instead.
 
