MEGA call for votes by DKF

--- a/tip/415.md
+++ b/tip/415.md
@@ -2,7 +2,7 @@
 	Author:         Simon Geard <simon@whiteowl.co.uk>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        16-Oct-2012
 	Post-History:   
 	Keywords:       Tk
@@ -21,36 +21,35 @@ scope of this TIP.
 # Rationale
 
 There is scope to enhance arc creation to make it much more useful as was
-shown by a recent discussion on news:comp.lang.tcl. The proposal here is the
+shown by a recent discussion on [comp.lang.tcl](news:comp.lang.tcl). The proposal here is the
 simplest enhancement to enable creation of circular arc segments from a single
 parameter.
 
 # Proposal
 
-Enhance arc creation to support a new **-height** option
+Enhance arc creation to support a new **-height** option:
 
  > _canvas_ **create arc** _x1 y1 x2 y2_ **-height** _h_ ?_options_?
 
-The new option **-height** _h_ causes the specified coordinates _x1 y1_ and _ x2 y2_ to be interpreted as the
+The new option **-height** _h_ causes the specified coordinates (_x1, y1_) and (_x2, y2_) to be interpreted as the
 start and end points of the arc's chord. The value of _h_ is the \(canvas\) distance of the arc's
-mid-point from the chord with the sign of _h_ determining the direction of the arc:
+mid-point from the chord, with the sign of _h_ determining the direction of the arc:
 
-_h_ > 0 => clockwise
-_h_ < 0 => anticlockwise
+> _h_ > 0 &rArr; clockwise  
+> _h_ < 0 &rArr; anticlockwise
 
-If _h_ != 0 then the options _-start_ and _-extent_ are ignored \(because they are calculated internally for a given _h_\).
-
+If _h_ &ne; 0 then the options **-start** and **-extent** are ignored \(because they are calculated internally for a given _h_\).
 Any non-zero value of _h_ defines a unique arc.
 
-If _h_ = 0 \(exactly\) the option is ignored and the command is processed as if it wasn't present. In addition
+If _h_ = 0 \(exactly\) the option is ignored and the command is processed as if it wasn't present. In addition:
 
- > _canvas_ **itemcget** _tagOrId_ _--height**
+ > _canvas_ **itemcget** _tagOrId_ **-height**
 
-will always return 0. This behaviour enables introspection without complications. A consequence is that
+will always return 0. This behaviour enables introspection without complications. A consequence is that:
 
- > _canvas_ **itemconfigure** _tagOrId_ _--height** _0_
+ > _canvas_ **itemconfigure** _tagOrId_ **-height** _0_
 
- is a no-op.
+is a no-op.
 
 # Example
 
