--- a/tip/445.md
+++ b/tip/445.md
@@ -2,7 +2,7 @@
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        18-Mar-2016
 	Post-History:   
 	Tcl-Version:	8.7
@@ -12,7 +12,7 @@
 # Abstract
 
 Proposes additional public routines useful for extensions that implement
-custom **Tcl\_ObjType_s.
+custom `Tcl_ObjType`s.
 
 # Background
 
