--- a/tip/471.md
+++ b/tip/471.md
@@ -4,7 +4,7 @@
 	Type:           Project
 	Created:        05-May-2017
 	Tcl-Version:    8.7
-	Vote:		Pending
+	Vote:		In progress
 	Post-History:
 	Tcl-Branch:     info-linkedname
 -----
@@ -36,8 +36,7 @@ variable linked to.
 
 # Reference Implementation
 
-The reference implementation is available in the info-linkedname
-<http://core.tcl.tk/tcl/timeline?r=info-linkedname>  branch.
+The reference implementation is available in the [info-linkedname](http://core.tcl.tk/tcl/timeline?r=info-linkedname) branch.
 
 The code is licensed under the BSD license.
 
