--- a/tip/501.md
+++ b/tip/501.md
@@ -2,7 +2,7 @@
 	Author:         Sean Woods <yoda@etoyoc.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        12-Feb-2018
 	Post-History:
 	Keywords:       Tcl,string
