--- a/tip/506.md
+++ b/tip/506.md
@@ -2,7 +2,7 @@
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        30-Mar-2018
 	Post-History:   
 	Tcl-Version:	8.7
@@ -29,7 +29,7 @@ Like all encapsulation-breaking, the effect is to more strongly
 couple together modules of code so that they are inhibited
 from freely evolving as independently as they otherwise could.
 Simply defining these routines as actual routines would take
-away that brittle coupling, and the Tcl 8 -> Tcl 9 transition
+away that brittle coupling, and the Tcl 8 &rarr; Tcl 9 transition
 is the opportunity to do it.
 
 The disadvantages of the existing implementation are clear, so
