--- a/tip/510.md
+++ b/tip/510.md
@@ -2,7 +2,7 @@
 	Author:         René Zaumseil <r.zaumseil@freenet.de>
 	State:          Draft
 	Type:           Project
-	Vote:           
+	Vote:           In progress
 	Created:        5-Jun-2018
 	Post-History:   
 	Keywords:       Tk
@@ -34,6 +34,13 @@ Test files will be put in `.../tests/rbc/`
 
 The *Rbc* files will be added to the makefiles.
 The call to the `Rbc_Init()` function will be added in tkWindow.c
+
+## Platform Compatibility
+
+Initially, there will not be support for macOS when not using X11 for
+rendering. _This is an interim situation stemming from the Rbc
+developers being unable to target that platform when writing code;
+implementation there will be welcome and authorized under this TIP._
 
 # Discussion
 
