--- a/tip/518.md
+++ b/tip/518.md
@@ -2,7 +2,7 @@
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Done
+	Vote:           In progress
 	Created:        22-Sep-2018
 	Post-History:   
 	Keywords:       Tk
