--- a/tip/519.md
+++ b/tip/519.md
@@ -2,7 +2,7 @@
 	Author:       Pietro Cerutti <gahr@gahr.ch>
 	State:        Draft
 	Type:         Project
-	Vote:         Pending
+	Vote:         In progress
 	Created:      18-Oct-2018
 	Post-History:
 	Tcl-Version:  8.7
