--- a/tip/518.md
+++ b/tip/518.md
@@ -116,7 +116,7 @@ Emiliano has provided a [ticket 2863003fff](https://core.tcl.tk/tk/info/2863003f
 
 This solution is now continued with the tag "tip518-event-last-child-unmanaged".
 
-Koen Dankart and Francois Vogel have worked on the solution of the similar tip474, which is available in [branch bug-d6b95ce492-alt](http://core.tcl.tk/tk/timeline?r=bug-d6b95ce492-alt&nd&c=2016-09-22+09%3A16%3A21&n=200).
+Koen Dankart and Francois Vogel have worked on the solution of the similar tip474, which is available in [branch tip-454](http://core.tcl.tk/tk/timeline?n=100&r=tip-454).
 This information may eventually also be relevant.
 
 # Rejected Proposal
