Editorial cleanup of 290

--- a/tip/290.md
+++ b/tip/290.md
@@ -18,7 +18,7 @@ This TIP proposes the possibility to register a custom command as error and exce
 # Rationale
 
 Errors are thrown in the Tcl interpreter through the **error** command or
-from a C extension that returns TCL\_ERROR. When an error is thrown, the global
+from a C extension that returns `TCL_ERROR`. When an error is thrown, the global
 _errorInfo_ variable is filled with rudimentary stacktrace information and
 the error message itself. The global _errorCode_ variable can contain an
 error code if this is provided by the command that has thrown the error.
@@ -41,22 +41,22 @@ introspection capabilities, it is not possible to use them in an error case,
 because the execution just aborts and the stacktrace is unwound at once. For
 errors generated with the **error** command, it is possible to overwrite
 this command and provide more advanced functionality, but this is not
-possible if errors are generated in C code by _return TCL\_ERROR_.
+possible if errors are generated in C code by `return TCL_ERROR`.
 
 The proposed implementation addresses this problem by a custom error command
 that is executed whenever an error occurs in the execution of Tcl code. This
 opens a range of implementation possibilities for error handling, for
 instance:
 
-    * registering a _breakpoint_ command that stops execution at the error
-      position and opens a console for introspection
+ * registering a _breakpoint_ command that stops execution at the error
+   position and opens a console for introspection
 
-    * registering a more advanced \(Tk\) debugger that opens on error for
-      introspection.
+ * registering a more advanced \(Tk\) debugger that opens on error for
+   introspection.
 
-    * registering a command that captures the state of each call-frame up to
-      the one where the error was thrown and writes that state to a file. This
-      file can later be debugged \(with an appropriate tool\).
+ * registering a command that captures the state of each call-frame up to
+   the one where the error was thrown and writes that state to a file. This
+   file can later be debugged \(with an appropriate tool\).
 
 # Alternatives
 
@@ -64,9 +64,9 @@ instance:
 As stated abovem, this works only for errors generated from Tcl code, whereas it does not work for errors from C extensions.
 
  2. Leavestep execution traces
-In Tcl >=8.4 it is possible to register execution traces on _leavestep_ to commands. To implement part of the proposed functionality it would be possible to add a leavestep trace procedure, which - after each command - checks for the return code and acts accordingly. The problem with this approach is, that the procedure is called after _each_ command, independent from whether it returned an error or not. This can slow down the program execution more or less significantly. Furthermore, it is not easy if at all possible to capture occurences of **catch** by this way, so it is complicated or impossible to react on caught errors.
+In Tcl &ge; 8.4 it is possible to register execution traces on _leavestep_ to commands. To implement part of the proposed functionality it would be possible to add a leavestep trace procedure, which - after each command - checks for the return code and acts accordingly. The problem with this approach is, that the procedure is called after _each_ command, independent from whether it returned an error or not. This can slow down the program execution more or less significantly. Furthermore, it is not easy if at all possible to capture occurences of **catch** by this way, so it is complicated or impossible to react on caught errors.
 
-It might be possible to get part or most of the proposed functionality by _trace add execution leavestep_ or overwriting of **error**. But it is the responsibility of the core language \(even more when it is a dynamic language\) to provide customizable and advanced error handling. The TIP proposes in this direction.
+It might be possible to get part or most of the proposed functionality by `trace add execution leavestep` or overwriting of **error**. But it is the responsibility of the core language \(even more when it is a dynamic language\) to provide customizable and advanced error handling. The TIP proposes in this direction.
 
 # Specification
 
@@ -84,15 +84,20 @@ The registration command is responsible for:
 
 Since the functionality is very similar to the family of **trace** commands, the proposed registration command is an extension to trace:
 
-**trace set exception ?-caught? ?-uncaught? ?command?**: Registration and modification
+ > **trace set exception** ?**-caught**? ?**-uncaught**? ?_command_?: Registration and modification
 
-The arguments _-caught_ and/or _-uncaught_ to _trace set exception_ modify the run conditions for the currently registered handler \(run on caught/uncaught errors\). With the _command_ argument, this is set as the new handler. The return code and result of the command that was executing is appended to the registered _command_. So, the real call is: _command code result_.
+The arguments **-caught** and/or **-uncaught** to _trace set exception_ modify the run conditions for the currently registered handler \(run on caught/uncaught errors\). With the _command_ argument, this is set as the new handler. The return code and result of the command that was executing is appended to the registered _command_. So, the real call is: _command code result_.
 
-**trace info exception**: Information about the current handler
+ > **trace info exception**: Information about the current handler
 
-This command returns a list with the elements \{-caught y/n -uncaught y/n script\}, where caught and uncaught flags are specified and script is the currently registered handler.
+This command returns a list with the elements:
 
-**trace unset exception**: Remove registerred handler
+ > **-caught** _bool_ **-uncaught** _bool_ _script_
+
+where both **-caught** and **-uncaught** are specified (and each is associated with
+a boolean) and _script_ is the currently registered handler.
+
+ > **trace unset exception**: Remove registered handler
 
 Any previously set error handler is unregistered.
 
@@ -106,19 +111,18 @@ The changes in the execution engine should be done so that:
 
    * the _::errorInfo_ and _::errorCode_ variables are updated to contain the error information **that is available in the current callframe**. This information must be updated before the custom command is run, so that it is accessible from there.
 
-The innermost function that is called on Tcl code execution is _TclEvalObjvInternal\(\)_. It is called from others to execute a command and returns the code that the executed command returned. It's the best place to trigger the error handler execution, but whether errors are catched \(catchLevel\) must be present at this time. Therefore, this level is stored in the current Interp\* from within the callers of _TclEvalObjvInternal\(\)_. The catch level can be determined either from _TclExecuteByteCode\(\)_ or from _Tcl\_CatchObjCmd\(\)_ directly.
+The innermost function that is called on Tcl code execution is `TclEvalObjvInternal()`. It is called from others to execute a command and returns the code that the executed command returned. It's the best place to trigger the error handler execution, but whether errors are catched \(catchLevel\) must be present at this time. Therefore, this level is stored in the current Interp\* from within the callers of `TclEvalObjvInternal()`. The catch level can be determined either from `TclExecuteByteCode()` or from `Tcl_CatchObjCmd()` directly.
 
 The errorInfo and errorCode variables are set directly before the handler is run. This ensures that they are updated properly. Eventually registerred traces on this variable are handled as usual, before the custom error command is executed.
 
 # Reference Implementation
 
-A reference implementation is available from sourceforge as a patch against Tcl 8.5a5 <http://sourceforge.net/support/tracker.php?aid=1587317> .
+A reference implementation is available from sourceforge as a [patch against Tcl 8.5a5](http://sourceforge.net/support/tracker.php?aid=1587317).
 
 # Usage Example
 
 Here is a sample procedure that can be used to stop execution on error \(return code 1\) and
-introspect the program using stdin/stdout. Other return codes are returned together with the previous result. The procedure was mainly implemented by Neil Madden as **debug-repl** and is available \(with a short discussion on the topic\) on 
-<http://lambda-the-ultimate.org/node/1544#comment-18446> :
+introspect the program using stdin/stdout. Other return codes are returned together with the previous result. The procedure was mainly implemented by Neil Madden as **debug-repl** and is [available](http://lambda-the-ultimate.org/node/1544#comment-18446) \(with a short discussion on the topic\):
 
 	package provide debug 1.0
 	
